--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,92 @@
-node_modules
+# ----------------------------
+# Node.js & JS Package Files
+# ----------------------------
+node_modules/
 package-lock.json
+pnpm-debug.log*
+lerna-debug.log*
+
+# ----------------------------
+# Logs
+# ----------------------------
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# ----------------------------
+# Build Artifacts
+# ----------------------------
+build/
+dist/
+dist-ssr/
+*.local
+*.egg-info/
+
+# ----------------------------
+# Environment & Config
+# ----------------------------
+.env
+*.env
+.env.bak/
+.envrc
+.env/
+
+# ----------------------------
+# Python
+# ----------------------------
+*.py[cod]
+__pycache__/
+**/__pycache__/
+*/__pycache__/
+coverage.xml
+htmlcov/
+.cache/
+.tox/
+.pytest_cache/
+.mypy_cache/
+*.coverage
+*.sqlite3
+*.db
+
+# ----------------------------
+# Virtual Environments
+# ----------------------------
+venv/
+
+# ----------------------------
+# Editor & IDE
+# ----------------------------
+.vscode/*
+!.vscode/extensions.json
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+*.swp
+*.swo
+*.bak
+
+# ----------------------------
+# React Frontend
+# ----------------------------
+frontend/node_modules/
+frontend/build/
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+frontend/coverage/
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
+backend/uploads/
+# ----------------------------
+# OS Specific
+# ----------------------------
+.DS_Store
+Thumbs.db
+ehthumbs.db
